# autotag

./: .gitignore  BACKTEST_GUIDE.md  CONCURRENT_API.md  DATA_FLOW_ANALYSIS.md  DEPLOYMENT.md  ID_TYPE_MIGRATION.md  ID_TYPE_MIGRATION_QUICK_REF.md  QUICK_START.md  REPLAY_DAY_WINDOW.md  REPLAY_MODE_COMPLETE.md  REPLAY_USER_LOGIN_SKIP.md  SKIP_DOWNLOAD_MODE.md  TOKEN_CACHE.md  TOKEN_CACHE_FINAL_REPORT.md  TOKEN_CACHE_IMPL.md  TOKEN_CACHE_QUICK_REF.md  USAGE_SUMMARY.md  USER_FULL_BACKFILL_GUIDE.md  import_raw.py  pyproject.toml  readme.md  requirements.txt  test_replay_day_window.sh  标签定义详解.md
configs/: ops_thresholds.yaml  pipelines.yaml
configs/mappings/: channel_map.csv  status_map.yaml
configs/sources/: bet.yaml  bonus.yaml  recharge.yaml  user.yaml  withdraw.yaml
docs/: 功能说明.md  操作手册.md  架构与数据流.md
scripts/: backfill.sh  backfill_daily_snapshot.sh  backtest.sh  cleanup_logs.sh  init_backfill.sh  run_daily.sh  run_realtime.sh  sync_mobile_dir.sh  user_full_backfill.sh  weekly_replay.sh
src/autotag/: __init__.py  cli.py
src/autotag/db/: duckdb_conn.py
src/autotag/ingest/: discover.py  downloader.py  manifest.py  mobile_sync.py  token_cache.py
src/autotag/load/: build_mart.py  normalize.py  raw_import.py
src/autotag/model/: features.py  labeling.py  snapshot_daily.py  views_ops.py
src/autotag/ops/: __init__.py  pipeline_runner.py  run_history.py
src/autotag/publish/: atomic_publish.md  snapshot.py  validate.py
src/autotag/utils/: alert.py  logging.py  paths.py  time.py
tests/: test_labeling.py  test_publish_gating.py  test_schema.py
(+8 files in other folders)
